# calculator

./: .gitignore  GEMINI.md  README.md  pyproject.toml
.specify/memory/: constitution.md
history/prompts/001-calc-cli/: 0001-initialize-calculator-cli-specification.spec.prompt.md  0002-resolve-chained-operations-clarification.spec.prompt.md  0003-update-spec-for-python-implementation.spec.prompt.md  0004-create-feature-branch-001-calc-cli.general.prompt.md  0005-initialize-implementation-plan-for-calculator-cli.plan.prompt.md  0006-update-result-formatting-for-dynamic-precision.spec.prompt.md  0007-renumber-prompt-history-records-for-sequential-consistency.general.prompt.md  0008-clarify-calculator-specification-details.spec.prompt.md  0009-adopt-uv-for-package-and-environment-management.misc.prompt.md  0010-generate-dependency-ordered-task-list-for-calculator-cli.tasks.prompt.md  0011-add-mandatory-phase-review-requirement-to-tasks.tasks.prompt.md  0012-complete-calculator-cli-implementation.green.prompt.md  0012-update-spec-for-python-implementation.spec.prompt.md  0013-execute-agentic-git-workflow-for-implementation-commit.misc.prompt.md  0014-fix-result-formatting-to-avoid-scientific-notation.green.prompt.md  0016-create-feature-branch-001-calc-cli.general.prompt.md  (+1 more)
specs/001-calc-cli/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: main.py
src/calculator/: __init__.py  evaluator.py  parser.py
src/utils/: logger.py
tests/integration/: test_cli.py
tests/unit/: test_evaluator.py  test_parser.py
(+26 files in other folders)
